--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title></title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="css/style1.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" href="style.css" media="screen">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
