--- a/thirth.html
+++ b/thirth.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/animate.css">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="css/style3.css">
+		<link rel="stylesheet" href="style3.css">
 	</head>
 	<body>
 		<div class="container grid">
