--- a/forth.html
+++ b/forth.html
@@ -3,7 +3,7 @@
 	<head>
 		<title></title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="css/style4.css">
+		<link rel="stylesheet" type="text/css" href="style4.css">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	</head>
 	<body>
