--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 			<header class="header">
 				<div class="logo"></div>
 				<a class="links1" href="index.html"><h1>Головна</h1></a>
-				<a class="links1" href=".html"><h1>Світ майбутнього</h1></a>
+				<a class="links1" href="scnd.html"><h1>Світ майбутнього</h1></a>
 				<a class="links1" href="thirth.html"><h1>Навичка навчання</h1></a>
 				<a class="links2" href="four.html"><h1>Вчимось вчитись</h1></a>
 				<a class="links2" href="fifth.html"><h1>Never stop learning</h1></a>
-				<a class="links2" href="#"><h1>Моя програма</h1></a>
+				<a class="links2" href="six.html"><h1>Моя програма</h1></a>
 			</header>
 			<div class="content">
 				<p class="title">Мій персональний Оксфорд</p>
