--- a/forth.html
+++ b/forth.html
@@ -11,13 +11,12 @@
 			<div class="line"></div>
 			<header class="forth-header">
 				<div class="header_logo"></div>
-				<div class="header_p">
-				<div class="header_p1">Головна</div>
-				<div class="header_p2">Світ майбутнього</div>
-				<div class="header_p3">Навичка навчання</div>
-				<div class="header_p4">Вчимось вчитись</div>
-				<div class="header_p5">Never stop learning</div>
-				<div class="header_p6">Моя програма</div>
+				<a class="links1" href="index.html"><h1>Головна</h1></a>
+				<a class="links1" href="scnd.html"><h1>Світ майбутнього</h1></a>
+				<a class="links1" href="thirth.html"><h1>Навичка навчання</h1></a>
+				<a class="links2" href="four.html"><h1>Вчимось вчитись</h1></a>
+				<a class="links2" href="fifth.html"><h1>Never stop learning</h1></a>
+				<a class="links2" href="six.html"><h1>Моя програма</h1></a>
 			</header>
 			<div class="forth-content">
 				<p class="forth-title">Вчимося вчитись</p>
