--- a/fifth.html
+++ b/fifth.html
@@ -13,12 +13,12 @@
 			<div class="line"></div>
 			<header class="header">
 				<div class="logo"></div>
-				<a class="link_1 link" href=""><b>Головна</b></a>
-				<a class="link_2 link" href=""><b>Світ Майбутнього</b></a>
-				<a class="link_3 link" href=""><b>Навичка навчання</b></a>
-				<a class="link_4 link" href=""><b>Вчимось вчитись</b></a>
-				<a class="link_5 link" href=""><b>Never stop learning</b></a>
-				<a class="link_6 link" href=""><b>Моя програма</b></a>
+				<a class="links1" href="index.html"><h1>Головна</h1></a>
+				<a class="links1" href="scnd.html"><h1>Світ майбутнього</h1></a>
+				<a class="links1" href="thirth.html"><h1>Навичка навчання</h1></a>
+				<a class="links2" href="four.html"><h1>Вчимось вчитись</h1></a>
+				<a class="links2" href="fifth.html"><h1>Never stop learning</h1></a>
+				<a class="links2" href="six.html"><h1>Моя програма</h1></a>
 			</header>
 			<div class="content">
 				<p class="title_fifth">Never stop learning</p>
