--- a/six.html
+++ b/six.html
@@ -12,13 +12,12 @@
 			<div class="line"></div>
 			<header>
 				<div class="header_logo"></div>
-				<div class="header_p">
-				<div class="header_p1"><b>Головна</b></div>
-				<div class="header_p2"><b>Світ майбутнього</b></div>
-				<div class="header_p3"><b>Навичка навчання</b></div>
-				<div class="header_p4"><b>Вчимось вчитись</b></div>
-				<div class="header_p5"><b>Never stop learning</b></div>
-				<div class="header_p6"><b>Моя програма</b></div>
+				<a class="links1" href="index.html"><h1>Головна</h1></a>
+				<a class="links1" href="scnd.html"><h1>Світ майбутнього</h1></a>
+				<a class="links1" href="thirth.html"><h1>Навичка навчання</h1></a>
+				<a class="links2" href="four.html"><h1>Вчимось вчитись</h1></a>
+				<a class="links2" href="fifth.html"><h1>Never stop learning</h1></a>
+				<a class="links2" href="six.html"><h1>Моя програма</h1></a>
 			</header>
 			<div class="content">
 				<h1 class="title_fifth">Моя програма</h1>
